FIX: Tooltips not showing correctly.
- Rework the tooltip positioning to be based on css relative positioning rather than absolute position via javascript.

--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ body {
     background-color: burlywood;
 }
 
-#GameMenu-waveList #current {
+#GameMenu-waveList #CurrentWave {
     border: 3px solid cadetblue;
 }
 
@@ -121,6 +121,7 @@ body {
 }
 
 #GameMenu-waveList .wave {
+    border: 3px solid transparent;
     min-width: 100px;
     padding: 10px;
     cursor: default;
@@ -152,13 +153,16 @@ body {
 
 .tooltip {
     position: absolute;
+    bottom: 115%;
+    left: 0;
     min-width: 100px;
     box-shadow: 0 0 5px #363636;
     border-radius: 5px;
-    padding: 5px;
+    padding: 5px 10px;
     font-size: 20px;
     text-align: center;
     background-color: rgb(250, 250, 250);
+    white-space: nowrap;
 }
 
 @media only screen and (max-width: 1200px) {
